--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 	--muted: 220 10% 55%;
 }
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Arial', 'Helvetica', sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
