--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,7 +23,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <!-- Font preloads -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@0,400;0,700&family=Open+Sans:wght@0,400;0:700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@0,400;0,700&display=swap" rel="stylesheet">
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
