--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,7 +122,7 @@ const LANGUAGES = [
 			<h2 class="font-bold text-2xl">About</h2>
 			<div class="py-2" />
 			<p class="text-muted font-mono">
-				Dynamic Full Stack Developer with experience in different stacks, like <b>Angular, React</b> + <b>Nest</b> or <b>HTMX</b> + <b>Django</b>, with a passion for constantly experimenting and pushing my knowledge further.
+				Dynamic Full Stack Developer familiar with the <b>Node</b> and <b>Python</b> ecosystems. Used different stacks professionally, like <b>Angular, React</b> + <b>Nest</b> or <b>HTMX</b> + <b>Django</b>. I have a passion for constantly experimenting and pushing my knowledge further.
 				Proven expertise in development for e-commerce platforms, web applications, desktop applications via WebUI, and ERP systems.
 				I do enjoy dabbling with Go and Rust for my side projects as well. Proficient <b>Linux</b> and <b>NVIM</b> user. Passionate about open-source.
 			</p>
