--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,26 +3,21 @@ import BaseHead from '../components/BaseHead.astro';
 import {Linkedin, Phone, Mail, Printer} from "lucide-astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
-const ABOUT_ME = `
-
-`
 const WORK_EXP = [
 	{
 		company: "Raintonic",
 		location: "Padova (PD)",
 		title: "Full-stack Developer",
-		description: `Worked on ERP systems for large enterprise clients with Node and Python.
-Currently responsible for upgrading the FE for ATMs in Europe for a leading Italian bank.
-Helped with build processes and containerizing our apps and SysAdmin tasks and set up Jenkins CI/CD pipelines`,
+		description: `Worked on development and enhanments of ERP systems for large enterprise clients, mainly leveraging Node. Working as the company's lead developer for a new front-end for ATMs across Europe for a leading Italian bank. Oversaw architectural planning and provided strategic direction for the project. Managed a small development team (1 to 4 people), conducted thorough code reviews, and ensured high-quality deliverables. Acted as the primary technical liaison with the client's project manager, facilitating clear and effective communication. Additionally, optimized build processes, containerized some of our apps with Docker, performed SysAdmin tasks, and established Jenkins CI/CD pipelines to streamline development workflows.`,
 		dates: "2022 - present",
-		tags: ['angular', 'react', 'nestjs', 'deno', 'node']
+		tags: ['angular', 'react', 'nestjs', 'node']
 	},
 	{
 		company: "Cortek",
 		location: "Perugia (PG)",
 		title: "Full-stack Developer",
 		description: `I played a pivotal role in orchestrating e-commerce infrastructure, primarily leveraging the Shopify platform. Additionally, I spearheaded content creation for e-commerce platforms and expanded sales channels to include platforms such as Amazon and Meta. My contributions directly contributed to the growth and success of the company's online presence.`,
-		dates: "2021 - 2022",
+		dates: "2020 - 2022",
 		tags: ['node', 'nextjs', 'react', 'nosql']
 	},
 	{
@@ -30,7 +25,7 @@ Helped with build processes and containerizing our apps and SysAdmin tasks and s
 		location: "Solomeo (PG)",
 		title: "Boutique Coordinator",
 		description: `During my tenure at Brunello Cucinelli, I excelled in various roles, primarily as a Boutique Coordinator. In this capacity, I provided guided tours of the company's production facilities to high profile international clients (Forbes 100) in Italian, English, Russian and French. Additionally, I specialized in Made to Measure services and offered comprehensive customer consultation and service throughout the sales process. I was proficient in utilizing AS400/Salesforce systems. Furthermore, I implemented visual merchandising guidelines for window displays and shelves and managed restocking activities, participating in order processing during sales campaigns in collaboration with the Store Manager.`,
-		dates: "2017 - 2021",
+		dates: "2017 - 2020",
 		tags: ['sales', 'pr', 'management', 'vm']
 	}
 ]
@@ -122,9 +117,7 @@ const LANGUAGES = [
 			<h2 class="font-bold text-2xl">About</h2>
 			<div class="py-2" />
 			<p class="text-muted font-mono">
-				Dynamic Full Stack Developer familiar with the <b>Node</b> and <b>Python</b> ecosystems. Used different stacks professionally, like <b>Angular, React</b> + <b>Nest</b> or <b>HTMX</b> + <b>Django</b>. I have a passion for constantly experimenting and pushing my knowledge further.
-				Proven expertise in development for e-commerce platforms, web applications, desktop applications via WebUI, and ERP systems.
-				I do enjoy dabbling with Go and Rust for my side projects as well. Proficient <b>Linux</b> and <b>NVIM</b> user. Passionate about open-source.
+				Experienced Software Dev with a robust background in frontend development and a strong track record in delivering complex projects. Adept at guiding small teams and driving innovation within e-commerce platforms, web applications and ERP systems. Demonstrated the ability to lead small teams, and effectively communicate with both stakeholders and colleagues, fostering an environment of continuous learning and improvement. Proficient in creating strategic technical roadmaps and ensuring the alignment of technology with business goals. A passionate advocate for open-source and a committed Linux and NVIM user.
 			</p>
 			<div class="py-4" />
 			<h1 class="font-bold text-2xl">Work Experience</h1>
