--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -24,7 +24,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@0,400;0,700&display=swap" rel="stylesheet">
-<script defer src="https://analytics.eu.umami.is/script.js" data-website-id="58a545aa-db91-4612-b973-33b5d6b11c33"></script>
+<script is:inline defer src="https://analytics.eu.umami.is/script.js" data-website-id="58a545aa-db91-4612-b973-33b5d6b11c33"></script>
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
