fix: break spaces

--- a/src/pages/[lang].astro
+++ b/src/pages/[lang].astro
@@ -179,7 +179,7 @@ const LANGUAGES = [
 						</div>
 					</div>
 					<div class="py-2" />
-					<span class="text-muted font-mono">{exp.description}</span>
+					<span class="text-muted font-mono whitespace-break-spaces">{exp.description}</span>
 					<div class="py-4" />
 				</li>
 				)}
