feat: desc update

--- a/src/pages/[lang].astro
+++ b/src/pages/[lang].astro
@@ -46,7 +46,7 @@ const EDUCATION = [
 		location: 'University of California, Santa Cruz',
 		title: 'C for Everyone: Structured Programming',
 		dates: 'Jul 2024',
-		summary: 'Course on simple DSAs in C, memory allocation, pointers and an introduction to C++'
+		summary: 'Course on DSAs in C/C++, memory allocation, pointers'
 	},
 	{
 		location: 'Duke University',
